--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
 
   p {
@@ -15,10 +15,13 @@
 }
 
 .footer_caja {
+  width: 100%;
+  background-color: var(--color-oro);
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  /* position: relative; */
+  overflow: hidden;
 }
 
 .footer_imagen {
@@ -31,13 +34,16 @@
 }
 
 .footer_redes {
-  background-color: var(--color-oro);
-  width: 50%;
+  /* background-color: var(--color-oro); */
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  margin: 0;
+  padding: 0;
 
   h2 {
     font-family: var(--font-parrafo);
@@ -65,8 +71,8 @@
 }
 
 .footer_contacto {
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -132,12 +138,12 @@
   }
 
   .footer_caja {
-  
+
     flex-direction: column;
   }
 
   .footer_imagen {
-   display: none;
+    display: none;
   }
 
   .footer_redes {
@@ -146,7 +152,7 @@
     flex-direction: column;
 
     h2 {
-     font-size: medium;
+      font-size: medium;
     }
   }
 
@@ -156,7 +162,7 @@
     margin-bottom: 10px;
   }
 
-  
+
 
   .footer_icono:hover {
     cursor: pointer;
