--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -7,6 +7,9 @@
   padding: 15px 0 10px 0;
 
   
+    background-repeat: no-repeat;
+    background-position: initial;
+    background-size: cover;
 }
 
 .header_nav {
@@ -114,7 +117,7 @@
 .header_informacion_imagen {
   overflow: hidden;
   width: 100%;
-  height: 350px;
+  height: 360px;
   display: flex;
   justify-content: center;
   align-items: center;
