--- a/src/component/card/Card.css
+++ b/src/component/card/Card.css
@@ -1,6 +1,6 @@
 .card {
   width: 250px;
-  height: 450px; 
+  height: 450px;
   border-radius: 15px;
   overflow: hidden;
   background-color: rgba(235, 240, 198, 0.904);
@@ -8,8 +8,9 @@
   margin: 5px;
   border: 0.5px solid rgb(179, 173, 173);
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   position: relative;
+
   img {
     width: 100%;
     height: 260px;
@@ -17,53 +18,55 @@
     padding-bottom: 0;
     overflow: hidden;
   }
-  img:hover{
+
+  img:hover {
     scale: 1.03;
     cursor: pointer;
   }
 }
-.card_oferta{
-position: absolute;
-color: white;
-font-family: var(--font-subtitulo);
-background-color: red;
-padding: 10px 5px;
-text-transform: capitalize;
-border-radius: 50%;
-right: 10px;
-top: 10px;
+
+.card_oferta {
+  position: absolute;
+  color: white;
+  font-family: var(--font-subtitulo);
+  background-color: red;
+  padding: 10px 5px;
+  text-transform: capitalize;
+  border-radius: 50%;
+  right: 10px;
+  top: 10px;
 }
 
 .card:hover {
   transform: scale(1.03);
-  box-shadow: 1px 1px 12px 0px rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 12px 0px rgba(0, 0, 0, 0.2);
 }
 
 .card_informacion {
   background-color: lightsteelblue;
   padding: 10px;
-  flex: 1; 
+  flex: 1;
   display: flex;
   flex-direction: column;
-  
+
   h2 {
     margin: 5px 0;
     font-family: var(--font-subtitulo);
     text-transform: uppercase;
     font-size: 1.2rem;
   }
-  
+
   h3 {
     font-family: var(--font-parrafo);
     text-transform: capitalize;
     margin: 5px 0;
     font-size: 1rem;
   }
-  
+
   p {
     font-family: var(--font-parrafo);
     margin: 5px 0;
-    flex-grow: 1; 
+    flex-grow: 1;
   }
 }
 
@@ -71,26 +74,26 @@ top: 10px;
   background-color: white;
   border-radius: 15px;
   padding: 10px;
-  margin-top: auto; 
+  margin-top: auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  
+
   p {
     font-family: var(--font-parrafo);
     font-size: var(--font-size-parrafo);
     font-weight: bold;
     color: #333;
   }
-  
+
   button {
     padding: 10px 20px;
-              border: none;
-              border-radius: 5px;
-              cursor: pointer;
-              background-color: #25D366;
-              color: "white";
-              font-weight: "bold";
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #25D366;
+    color: "white";
+    font-weight: "bold";
     font-family: var(--font-parrafo);
     font-size: var(--font-size-parrafo);
     color: white;
@@ -99,66 +102,121 @@ top: 10px;
     cursor: pointer;
     transition: all 0.2s ease;
   }
-  
+
   button:hover {
     background-color: gold;
     transform: translateY(-2px);
   }
 }
+
 @media (max-width:500px) {
   .card {
-  width: 190px;
-  height: 450px; 
+    width: 190px;
+    height: 450px;
 
-  margin: 2px;
-  margin-bottom: 10px;
- 
+    margin: 2px;
+    margin-bottom: 10px;
+
+  }
+
+
+  .card_informacion {
+    background-color: lightsteelblue;
+    padding: 10px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    h2 {
+      margin: 5px 0;
+      font-family: var(--font-subtitulo);
+      text-transform: uppercase;
+      font-size: 1rem;
+    }
+
+    h3 {
+      font-family: var(--font-parrafo);
+      text-transform: capitalize;
+      margin: 5px 0;
+      font-size: 0.8rem;
+    }
+
+    p {
+      font-family: var(--font-parrafo);
+      margin: 5px 0;
+      flex-grow: 1;
+    }
+  }
+
+  .card_precio {
+    padding: 9px;
+
+    p {
+      font-family: var(--font-parrafo);
+      font-size: var(--font-size-parrafo);
+      font-weight: bold;
+      color: #333;
+    }
+
+    button {
+      padding: 8px 10px;
+
+    }
+  }
 }
 
+@media (max-width:390px) {
+  .card {
+    width: 180px;
+    height: 400px;
 
-.card_informacion {
-  background-color: lightsteelblue;
-  padding: 10px;
-  flex: 1; 
-  display: flex;
-  flex-direction: column;
-  
-  h2 {
-    margin: 5px 0;
-    font-family: var(--font-subtitulo);
-    text-transform: uppercase;
-    font-size: 1rem;
+    margin: 1.5px;
+    margin-bottom: 10px;
   }
-  
-  h3 {
-    font-family: var(--font-parrafo);
-    text-transform: capitalize;
-    margin: 5px 0;
-    font-size: 0.8rem;
-  }
-  
-  p {
-    font-family: var(--font-parrafo);
-    margin: 5px 0;
-    flex-grow: 1; 
-  }
-}
 
-.card_precio {
-  padding: 9px;
- 
-  p {
-    font-family: var(--font-parrafo);
-    font-size: var(--font-size-parrafo);
-    font-weight: bold;
-    color: #333;
-  }
-  
-  button {
-    padding: 8px 10px;
-    
-  }
-  
 
-}
+  .card_informacion {
+    background-color: lightsteelblue;
+    padding: 5px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    h2 {
+      margin: 3px 0;
+      font-family: var(--font-subtitulo);
+      text-transform: uppercase;
+      font-size: 1rem;
+    }
+
+    h3 {
+      font-family: var(--font-parrafo);
+      text-transform: capitalize;
+      margin: 3px 0;
+      font-size: 0.8rem;
+    }
+
+    p {
+      font-family: var(--font-parrafo);
+      margin: 5px 0;
+      flex-grow: 1;
+    }
+  }
+
+  .card_precio {
+    padding: 9px;
+
+    p {
+      font-family: var(--font-parrafo);
+      font-size: var(--font-size-parrafo);
+      font-weight: bold;
+      color: #333;
+    }
+
+    button {
+      padding: 8px 10px;
+
+    }
+  }
+
 }
