--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -8,7 +8,7 @@
 
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: left;
 }
 
 .header_nav {
