--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -12,6 +12,19 @@
     color: white;
     font-size: smaller;
   }
+  .footer_privacidad{
+  background-color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  color: black;
+  font-size: large;
+  padding: 10px 0;
+  font-weight: bold;
+}
+.footer_privacidad:hover{
+  cursor: pointer;
+  scale: 1.02;
+}
 }
 
 .footer_caja {
